index pageage communicates with feed page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>hairLOOKS</title>
 
     <style>
     body {
@@ -20,12 +20,12 @@
 
   </head>
   <body>
-    hi
-    <% for (let Photo of allPhotos){ %>
-      <a href= '/photos/<%=Photo._id %>'><img src="<%= Photo.url %>"></a>
-    <% } %>
-    <br>
-    <a href="/photos/new">Add a Photo</a>
+    <a href="/photos/feed%>">Feed</a>
+    <a href="#">Your Page</a>
+    <a href="#">Users</a>
+    <a href="#">Log In / Register</a>
+
+    Div of spotlight (random pics)
 
 
   </body>
