index communicates with all users page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,9 +20,9 @@
 
   </head>
   <body>
-    <a href="/photos/feed%>">Feed</a>
-    <a href="#">Your Page</a>
-    <a href="#">Users</a>
+    <a href='/photos/feed>'>Feed</a>
+    <a href='/photos/'>Your Page</a>
+    <a href='/photos/users'>Users</a>
     <a href="#">Log In / Register</a>
 
     Div of spotlight (random pics)
