--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,8 @@
     <a href='/photos/feed>'>Feed</a>
     <a href='/photos/'>Your Page</a>
     <a href='/photos/users'>Users</a>
-    <a href="#">Log In / Register</a>
+    <a href='/sessions/login'>Log In</a>
+    <a href='/users/register'>Register</a>
 
     Div of spotlight (random pics)
 
