--- a/views/new.ejs
+++ b/views/new.ejs
@@ -3,8 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Add Photo</title>
+
+    <link rel="stylesheet" href="/style.css">
+
   </head>
   <body>
+
+    <div id="container">
+
+      <% include ../views/partials/header.ejs %>
+
+    </div>
 
   </body>
 </html>
