--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -3,8 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Edit Photo</title>
+
+    <link rel="stylesheet" href="/style.css">
+
   </head>
   <body>
+
+    <div id="container">
+
+      <% include ../views/partials/header.ejs %>
+
+
+    </div>
 
 
   </body>
