--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -3,12 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Feed</title>
+
+    <link rel="stylesheet" href="/style.css">
+
   </head>
   <body>
+
+    <div id="container">
+
+      <% include ../views/partials/header.ejs %>
+
+
     hi
     <% for (let Photo of allPhotos){ %>
       <a href='/photos/<%=Photo._id %>'><img src="<%= Photo.url %>"></a>
     <% } %>
+
+    </div>
 
   </body>
 </html>
