--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,15 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>User Profile</title>
+    
+    <link rel="stylesheet" href="/style.css">
+
     <%# add username property tp title instead of user%>
   </head>
   <body>
+
+    <div id="container">
+
+      <% include ../views/partials/header.ejs %>
 
     <a href="/photos/new">Add a Photo</a>
     <%# change to just this user's photos%>
     <% for (let Photo of allPhotos){ %>
       <a href= '/photos/<%=Photo._id %>'><img src="<%= Photo.url %>"></a>
     <% } %>
+
+    </div>
 
   </body>
 </html>
