--- a/views/users.ejs
+++ b/views/users.ejs
@@ -3,10 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>All Users</title>
+
+    <link rel="stylesheet" href="/style.css">
+
   </head>
   <body>
+    <div id="container">
+
+      <% include ../views/partials/header.ejs %>
 
     divs containing user's name, most recent photo, # of posts
+
+    </div>
 
   </body>
 </html>
