server modified for deployment

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,15 +2,15 @@
 
   <div class="head_left">
     <div class="logo">
-      <a href='/'>hair<span class="looks">LOOKS</span></a>
+      <a href='/'><span class="h">h</span>air<span class="looks">LOOKS</span></a>
     </div>
-    <a href='/photos/feed'>Feed</a>
-    <a href='/photos/'>Your Page</a>
-    <a href='/photos/users'>Users</a>
+    <a class="top-links" href='/photos/feed'>Feed</a>
+    <a class="top-links" href='/photos/'>Your Page</a>
+    <a class="top-links" href='/photos/users'>Users</a>
   </div>
   <div class="head_right">
-    <a href='/sessions/login'>Log In</a>
-    <a href='/users/register'>Register</a>
+    <a class="top-links" href='/sessions/login'>Log In</a>
+    <a class="top-links" href='/users/register'>Register</a>
   </div>
 
  </div>
