--- a/public/style.css
+++ b/public/style.css
@@ -32,26 +32,23 @@ ul {
   background: linear-gradient(rgba(237, 237, 237, .8), rgba(250, 250, 250, .8));
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.1);
   margin-bottom: 5em;
-}
-
-.header a {
-  color:#b5b5b5;
-  font-family: arial;
-}
-
-.header a:hover {
-  color:#a3a3a3;
-  font-family: arial;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
 
 .head_left {
   float: left;
   padding-left: 12px;
+  width: 50%;
+  text-align: left;
 }
 
 .head_right{
   float: right;
   padding-right: 12px;
+  width: 50%;
+  text-align: right;
 }
 
 .logo {
@@ -61,7 +58,7 @@ ul {
 
 .logo a {
   color: #d6d6d6;
-  font-size: 2em;
+  font-size: 2.5em;
   font-family: helvetica;
   text-decoration: none;
 }
@@ -70,7 +67,20 @@ span.looks {
   color: #fff;
 }
 
+span.h {
+  font-size: 1.1em;
+}
 
+a.top-links {
+  color:#b5b5b5;
+  font-family: arial;
+  margin-left: .8em;
+}
+
+a.top-links:hover {
+  color:#a3a3a3;
+  font-family: arial;
+}
 
 .spotlight {
   margin: auto;
