--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,12 +4,12 @@
     <div class="logo">
       <a href='/'><span class="h">h</span>air<span class="looks">LOOKS</span></a>
     </div>
-    <a class="top-links" href='/photos/feed'>Feed</a>
-    <a class="top-links" href='/photos/'>Your Page</a>
-    <a class="top-links" href='/photos/users'>Users</a>
+    <a class="top-links" href='/feed'>Feed</a>
+    <a class="top-links" href='/'>Your Page</a>
+    <a class="top-links" href='/user'>Users</a>
   </div>
   <div class="head_right">
-    <a class="top-links" href='/sessions/login'>Log In</a>
+    <a class="top-links" href='/user/login'>Log In</a>
     <a class="top-links" href='/users/register'>Register</a>
   </div>
 
