all users are now listed on users page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,11 +6,10 @@
     </div>
     <a class="top-links" href='/feed'>Feed</a>
     <a class="top-links" href='/'>Your Page</a>
-    <a class="top-links" href='/user'>Users</a>
+    <a class="top-links" href='/users'>Users</a>
   </div>
   <div class="head_right">
-    <a class="top-links" href='/user/login'>Log In</a>
-    <a class="top-links" href='/users/register'>Register</a>
+    <a class="top-links" href='/user/login'>Log In / Register</a>
   </div>
 
  </div>
