--- a/views/users.ejs
+++ b/views/users.ejs
@@ -12,6 +12,11 @@
 
       <% include ../views/partials/header.ejs %>
 
+      <% for (let User of allUsers) { %>
+             <a href="/"><h2><%= User.username %></h2></a>
+             <% } %>
+
+
     divs containing user's name, most recent photo, # of posts
 
     </div>
