current users page is linkable

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,7 +14,7 @@
 
       <% include ../views/partials/header.ejs %>
 
-      <%= oneUser.username %>
+      <h1><%= currentPage %></h1>
 
 
     </div>
