--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,6 +14,7 @@
 
       <% include ../views/partials/header.ejs %>
 
+      <a href="/users/newphoto">Upload New Photo</a>
       <h1><%= currentPage %></h1>
 
 
