--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,7 +17,9 @@
       <a href="/users/newphoto">Upload New Photo</a>
       <h1><%= currentPage %></h1>
 
-
+      <% for (let i = 0; i < photos.length; i++) { %>
+        <a href="/users/<%= photos[i].id %>/"><img src="<%= photos[i].url %>" /></a>
+      <% } %>
     </div>
 
   </body>
