--- a/views/show.ejs
+++ b/views/show.ejs
@@ -13,6 +13,10 @@
 
       <% include ../views/partials/header.ejs %>
 
+      <a href="/photos/new">Add a Photo</a>
+      <%# change to just this user's photos%>
+
+
     </div>
 
   </body>
