photo show page works

--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -15,7 +15,7 @@
 
 
     <% for (let Photo of allPhotos){ %>
-      <a href='/photos/<%=Photo._id %>'><img src="<%= Photo.url %>"></a>
+      <a href='/users/<%=Photo._id %>'><img src="<%= Photo.url %>"></a>
     <% } %>
 
     </div>
