--- a/views/show.ejs
+++ b/views/show.ejs
@@ -13,9 +13,7 @@
 
       <% include ../views/partials/header.ejs %>
 
-      <a href="/photos/new">Add a Photo</a>
-      <%# change to just this user's photos%>
-
+      <img src="<%= onePhoto.url %>">
 
     </div>
 
