--- a/views/show.ejs
+++ b/views/show.ejs
@@ -14,6 +14,7 @@
       <% include ../views/partials/header.ejs %>
 
       <img src="<%= onePhoto.url %>">
+      <h3><%= onePhoto.submitted_by %></h3>
 
     </div>
 
