--- a/views/users.ejs
+++ b/views/users.ejs
@@ -14,8 +14,8 @@
 
       <a class="top-links" href='/users/<%=username%>'>Your Page</a>
 
-      <% for (let User of allUsers) { %>
-        <a href="/users/<%= User.username %>"><%= User.username %></a>
+      <% for (let user of allUsers) { %>
+        <a href="/users/<%= user._id %>"><%= user.username %></a>
       <% } %>
 
 
