--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -12,7 +12,20 @@
     <div id="container">
 
       <% include ../views/partials/header.ejs %>
+      <form action="/feed/<%=photo.id%>?_method=PUT" method="POST">
+              <ul class="edit">
+                <li>URL:</li>
+                <input type="text" name="url" value="<%= photo.url %>"/>
+                <li>Caption</li>
+                <input type="text" name="caption" value="<%= photo.caption %>"/>
 
+              </ul>
+
+            <button type="submit">Submit Changes</button>
+            </form>
+            <form action="/feed/<%= photo.id %>?_method=DELETE" method="POST">
+              <input type="submit" value="Delete Post">
+            </form>
 
     </div>
 
