--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,13 +2,17 @@
 
   <div class="head_left">
     <div class="logo">
-      <a href='/'><span class="h">h</span>air<span class="looks">LOOKS</span></a>
+      <a href='/'><span class="h">t</span>ailored<span class="looks">hair</span></a>
     </div>
     <a class="top-links" href='/feed'>Feed</a>
     <a class="top-links" href='/users'>Users</a>
   </div>
   <div class="head_right">
-    <a class="top-links" href='/user/login'>Log In / Register</a>
+    <% if (username) { %>
+        <span class="hi">Hi, <span class="name"><%= username %></span>!</span> <a class="top-links" href="/user/logout">Log Out</a>
+    <% } else { %>
+    <a class="top-links" href='/user/login'>Log In | Register</a>
+    <% } %>
   </div>
 
  </div>
