--- a/views/show.ejs
+++ b/views/show.ejs
@@ -15,6 +15,8 @@
 
       <img src="<%= onePhoto.url %>">
       <h3><%= onePhoto.submitted_by %></h3>
+      <a href="/feed/<%=onePhoto._id%>/edit">Edit</a>
+      
 
     </div>
 
