--- a/views/users.ejs
+++ b/views/users.ejs
@@ -15,7 +15,7 @@
       <a class="top-links" href='/users/<%=username%>'>Your Page</a>
 
       <% for (let user of allUsers) { %>
-        <a href="/users/<%= user._id %>"><%= user.username %></a>
+        <a href="/users/<%= onePhoto %>"><%= user.username %></a>
       <% } %>
 
 
