--- a/public/style.css
+++ b/public/style.css
@@ -49,6 +49,7 @@ ul {
   padding-right: 12px;
   width: 50%;
   text-align: right;
+  padding-bottom: 7px;
 }
 
 .logo {
@@ -57,14 +58,15 @@ ul {
 }
 
 .logo a {
-  color: #d6d6d6;
+  color: #37379b;
   font-size: 2.5em;
   font-family: helvetica;
   text-decoration: none;
+  letter-spacing: -2px;
 }
 
 span.looks {
-  color: #fff;
+  color: #c4c4c4;
 }
 
 span.h {
@@ -75,11 +77,25 @@ a.top-links {
   color:#b5b5b5;
   font-family: arial;
   margin-left: .8em;
+  transition: .25s ease-in-out;
+  font-size: 1em;
 }
 
 a.top-links:hover {
-  color:#a3a3a3;
+  color:#37379b;
   font-family: arial;
+}
+
+.hi {
+  color:#b5b5b5;
+  font-family: arial;
+  font-size: 1em;
+}
+
+.name {
+  color:#277fc6;
+  font-family: arial;
+  font-size: 1em;
 }
 
 .spotlight {
