--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>hairLOOKS</title>
+    <title>TAILOREDhair</title>
 
     <link rel="stylesheet" href="/style.css">
 
@@ -13,9 +13,6 @@
       <% include ../views/partials/header.ejs %>
 
       <div class="spotlight">
-        <% if (username) { %>
-            Welcome, <%= username %>. <a href="/user/logout">Log Out</a>
-        <% } %>
               SPOTLIGHT AREA
       </div>
 
