--- a/views/session/login.ejs
+++ b/views/session/login.ejs
@@ -16,7 +16,7 @@
         <% if (message) { %>
           <%= message %>
         <% } %>
-        <div class="log-in">
+        <div class="fields">
         <h1>log in</h1>
           <form action="/user/login" method="post">
           <ul>
@@ -27,7 +27,7 @@
           </form>
         </div>
 
-        <div class="register">
+        <div class="fields">
           <h1>register</h1>
           <form action="/user/register" method="POST">
             <ul>
