--- a/views/new.ejs
+++ b/views/new.ejs
@@ -12,17 +12,24 @@
     <div id="container">
 
       <% include ../views/partials/header.ejs %>
-
-      <form action="/feed" method="POST">
-
-          <input type="text" name="url" placeholder="Photo URL"/>
-          <input type="hidden" name="submitted_by" value="<%= oneUser[0].username %>"/>
-          <input type="text" name="caption" placeholder="Caption"/>
-          <input type="hidden" name="user" value="<%= oneUser[0]._id %>"/>
-
-          <button type="submit">Add Photo</button>
-        </form>
-
+      <div class="show-page">
+        <hr class="indigo" />
+        <hr class="sky" />
+        <div class="fields">
+          <h1>add a photo</h1>
+          <form action="/feed" method="POST">
+            <ul>
+              <li class="login">Photo URL:</li><input type="text" name="url"/>
+              <input type="hidden" name="submitted_by" value="<%= oneUser[0].username %>"/>
+              <li class="login">Photo Caption:</li>  <textarea name="caption"/></textarea>
+              <input type="hidden" name="user" value="<%= oneUser[0]._id %>"/>
+            </ul>
+              <button type="submit">Add Photo</button>
+            </form>
+        </div>
+        <hr class="sky" />
+        <hr class="indigo" />
+      </div>
     </div>
 
   </body>
