more styling added to homepage

--- a/public/style.css
+++ b/public/style.css
@@ -96,10 +96,21 @@ a.top-links:hover {
 }
 
 .spotlight {
-  margin: auto;
-  width: 65%;
-  height: 20em;
-  background: rgba(237, 237, 237, .8);
+  margin: 20px auto;
+  width: 800px;
+  height: 400px;
+  overflow: hidden;
+  box-sizing: border-box;
+  background: #f7f7f7;
+  border-radius: 40px;
+  border: 10px solid #ccc;
+  text-align: center;
+  /*box-shadow:  inset 0 0 7px rgba(0, 0, 0, 0.3);*/
+}
+
+.spotlight img {
+  height: 100%;
+  margin: 0 10px;
 }
 
 .show-page {
@@ -260,6 +271,19 @@ textarea {
   margin: auto;
   border-radius: 30px;
   padding: 15px;
+}
+
+p.message {
+  color: #c67575;
+  font-family: arial;
+}
+
+.show-column {
+  margin: auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 /*<form action="/users/<%=username%>?_method=PUT" method="POST">
