--- a/views/show.ejs
+++ b/views/show.ejs
@@ -11,7 +11,7 @@
     <div id="container">
       <% include ../views/partials/header.ejs %>
         <div class="show-page">
-          <h1>By: <%= onePhoto.submitted_by %></h1>
+          <h1>by: <%= onePhoto.submitted_by %></h1>
           <hr class="indigo" />
           <hr class="sky" />
           <div class="photo-click">
