--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -13,21 +13,23 @@
       <% include ../views/partials/header.ejs %>
 
         <div class="show-page">
-          <h1><%= username %></h1>
-          <hr class="indigo" />
-          <hr class="sky" />
+          <div class="show-column">
+            <h1><%= username %></h1>
+            <hr class="indigo" />
+            <hr class="sky" />
 
-            <a href="/feed/new">Upload New Photo</a>
-            <% for (let photo of photos) { %>
-              <a href='/feed/<%= photo._id %>'>
-              <div class="show-img-container">
-                <div class="show-text">
-                  <%= photo.caption %>
+              <a class="top-links" href="/feed/new">Upload New Photo</a>
+            </div>
+              <% for (let photo of photos) { %>
+                <a href='/feed/<%= photo._id %>'>
+                <div class="show-img-container">
+                  <div class="show-text">
+                    <%= photo.caption %>
+                  </div>
+                  <img src="<%= photo.url %>"></a>
                 </div>
-                <img src="<%= photo.url %>"></a>
-              </div>
-              </a>
-            <% } %>
+                </a>
+              <% } %>
         </div>
     </div>
 
