--- a/views/new.ejs
+++ b/views/new.ejs
@@ -30,6 +30,10 @@
         <hr class="sky" />
         <hr class="indigo" />
       </div>
+
+      <% include ../views/partials/footer.ejs %>
+
+
     </div>
 
   </body>
