--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
       <a href='/'><span class="h">t</span>ailored<span class="looks">hair</span></a>
     </div>
     <a class="top-links" href='/feed'>Feed</a>
-    <a class="top-links" href='/users'>Users</a>
+    <a class="top-links" href='/'>Users</a>
   </div>
   <div class="head_right">
     <% if (username) { %>
