--- a/public/style.css
+++ b/public/style.css
@@ -104,13 +104,34 @@ a.top-links:hover {
   background: #f7f7f7;
   border-radius: 40px;
   border: 10px solid #ccc;
-  text-align: center;
-  /*box-shadow:  inset 0 0 7px rgba(0, 0, 0, 0.3);*/
+  display: flex;
+  flex-direction: row;
+  box-shadow:  inset 0 0 7px rgba(0, 0, 0, 0.2);
+}
+
+.spot-cont {
+  width: 800px;
+  height: 400px;
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  padding-left: 40px;
+  flex-wrap: wrap;
+}
+
+.image-cont {
+  min-width: 300px;
+  min-height: 340px;
+  max-width: 300px;
+  max-height: 340px;
+  overflow: hidden;
+  margin: 20px 25px;
+  border-radius: 10px;
+  box-sizing: border-box;
 }
 
 .spotlight img {
-  height: 100%;
-  margin: 0 10px;
+  width: 340px;
 }
 
 .show-page {
@@ -286,10 +307,124 @@ p.message {
   text-align: center;
 }
 
-/*<form action="/users/<%=username%>?_method=PUT" method="POST">
-    write a bio
-      <input type="text" name="caption" value="<%= editBio.bio %>"/>
+footer {
+  position: absolute;
+  bottom: 0;
+  height: 3em;
+  width: 100%;
+  text-align: center;
+  font-family: helvetica;
+  font-size: .8em;
+  color: #277fc6;
+}
 
-      <h2><%= userBio %></h2>
-      <button type="submit">Submit Changes</button>
-</form>*/
+
+@media (max-width: 800px) {
+  .spotlight {
+    background: none;
+    border: none;
+    box-shadow: none;
+    max-width:700px;
+  }
+
+  .spot-cont {
+    flex-direction: column;
+    max-height: 500px;
+    max-width: 700px;
+    padding-left: 0;
+  }
+
+
+  .image-cont {
+    min-width: 300px;
+    min-height: 300px;
+    max-width: 300px;
+    max-height: 300px;
+    margin: 20px;
+  }
+
+  .spotlight img {
+    width: 300px;
+  }
+
+  .logo {
+    display: block;
+    margin: 0;
+    padding-top: 80px;
+    margin-bottom: 20px;
+  }
+
+  .head_right, .head_left {
+    float: center;
+    padding: 0;
+    width: 100%;
+    text-align: center;
+  }
+
+  .header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 7em;
+  padding-bottom: 20px;
+  }
+
+  .logo a {
+    font-size: 5em;
+  }
+
+  a.top-links {
+    transition: .25s ease-in-out;
+    font-size: 1em;
+  }
+
+  .hi {
+    font-size: 1em;
+  }
+
+
+  .photo-click img {
+    width: 300px;
+    margin: auto;
+    border-radius: 30px;
+    padding: 15px;
+  }
+
+  .photo-click {
+    width: 400px;
+  }
+
+}
+
+@media (max-width: 600px) {
+  .spotlight {
+    width: 400px;
+    height: 800px;
+    flex-wrap: nowrap;
+  }
+
+  .spot-cont {
+    padding-left: 0;
+    width: 400px;
+    height: 800px;
+    flex-wrap: nowrap;
+    margin: 0;
+
+ }
+
+  .image-cont {
+    min-width: 400px;
+    min-height: 400px;
+    max-width: 400px;
+    max-height: 400px;
+    margin-top: 0;
+    margin-bottom: 10px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .spotlight img {
+    width: 400px;
+  }
+}
