--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,11 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>User Profile</title>
+    <title><%=username%>'s profile</title>
 
     <link rel="stylesheet" href="/style.css">
 
-    <%# add username property tp title instead of user%>
   </head>
   <body>
     <div id="container">
@@ -31,6 +30,10 @@
                 </a>
               <% } %>
         </div>
+
+        <% include ../views/partials/footer.ejs %>
+
+
     </div>
 
   </body>
