--- a/views/show.ejs
+++ b/views/show.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>User's Photo</title>
+    <title><%= onePhoto.submitted_by %>'s Photo</title>
 
     <link rel="stylesheet" href="/style.css">
 
@@ -18,9 +18,13 @@
             <img src="<%= onePhoto.url %>">
             <p><%= onePhoto.caption %></p>
 
-            <a href="/feed/<%=onePhoto._id%>/edit"><button>Edit</button>
+            <a href="/feed/<%=onePhoto._id%>/edit"><button>Edit</button></a>
           </div>
       </div>
+
+      <% include ../views/partials/footer.ejs %>
+
+
     </div>
   </body>
 </html>
