--- a/views/session/login.ejs
+++ b/views/session/login.ejs
@@ -40,7 +40,7 @@
 
         </div>
 
-        <% include ../views/partials/footer.ejs %>
+        <% include ../partials/footer.ejs %>
 
 
       </div>
