--- a/public/style.css
+++ b/public/style.css
@@ -319,7 +319,7 @@ footer {
 }
 
 
-@media (max-width: 800px) {
+@media only screen and (max-device-width: 800px) {
   .spotlight {
     background: none;
     border: none;
