--- a/public/style.css
+++ b/public/style.css
@@ -235,7 +235,7 @@ input {
   border: 3px solid #e0e0e0;
   border-radius: 10px;
   outline: 0;
-  background: #fcfcfc;
+  background: #fcfcfc !important;
   box-shadow:  inset 0 0 7px rgba(0, 0, 0, 0.3);
 }
 
@@ -308,7 +308,6 @@ p.message {
 }
 
 footer {
-  position: absolute;
   bottom: 0;
   height: 3em;
   width: 100%;
@@ -316,6 +315,7 @@ footer {
   font-family: helvetica;
   font-size: .8em;
   color: #277fc6;
+  padding-top: 1%;
 }
 
 
