--- a/public/style.css
+++ b/public/style.css
@@ -239,6 +239,10 @@ input {
   box-shadow:  inset 0 0 7px rgba(0, 0, 0, 0.3);
 }
 
+input:-webkit-autofill {
+  background: #fcfcfc !important;
+}
+
 li.login {
   color: #999;
   margin: 5px 0;
