--- a/views/session/login.ejs
+++ b/views/session/login.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Log In | Register</title>
 
         <link rel="stylesheet" href="/style.css">
 
