--- a/public/style.css
+++ b/public/style.css
@@ -32,6 +32,8 @@ ul {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  top: 0;
+  position: fixed;
 }
 
 .head_left {
@@ -107,6 +109,7 @@ a.top-links:hover {
   display: flex;
   flex-direction: row;
   box-shadow:  inset 0 0 7px rgba(0, 0, 0, 0.2);
+  margin-top: 10%;
 }
 
 .spot-cont {
@@ -141,6 +144,7 @@ a.top-links:hover {
   width: 90%;
   flex-wrap: wrap;
   justify-content: center;
+  margin-top: 10%;
 }
 
 .show-page h1 {
