--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer>
 
-Created by Foryst @ GA
+Created by Foryst | <a href="https://github.com/forystj/hair-looks">GitHub</a>
 <br>
-Photo's provided with &hearts; by Tailored Salon
+Photo's provided with &hearts; by <a href="http://tailoredsf.com">Tailored Salon</a>
 
 </footer>
