--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <div class="header">
-
+  <div class="center-header">
   <div class="head_left">
     <div class="logo">
       <a href='/'><span class="h">t</span>ailored<span class="looks">hair</span></a>
@@ -14,5 +14,6 @@
     <a class="top-links" href='/user/login'>Log In | Register</a>
     <% } %>
   </div>
+</div>
 
  </div>
